--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+	<script data-ad-client="ca-pub-1334134065467051" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	
 <style>
 		.container {  
 			width: 80%;
